<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>actions_ros2_clients</name>
  <version>0.1.0</version>
  <description>ROS 2 action client for executing trajectories</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>moveit_msgs</depend>

  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
